--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -44,6 +44,22 @@ div.ChannelName
     margin: 0;
     float: left;
 }
+div#infoDevice {
+    position: absolute;
+    border-radius: 50px;
+    background: rgba(0, 83, 110, 0.8);
+    color: #fff;
+    text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.5);
+    text-align: center;
+    font-size: 40px;
+    height: 60%;
+    width: 40%;
+    z-index: 10;
+    top: 50%;
+    left: 50%;
+    margin-left: -20%;
+    margin-top: -20%;
+}
 
 .RowDur {
     margin: 0;
