--- a/Views/Styles/General.css
+++ b/Views/Styles/General.css
@@ -128,6 +128,7 @@ body, html {
     scrollbar-arrow-color: RGBA(255, 255, 255, 0.9);
     scrollbar-track-color: RGBA(255, 255, 255, 0.9);
     scrollbar-darkshadow-color: RGBA(255, 255, 255, 0.9);
+    z-index: 1000000000000000000000000000000;   
 }
 
 /* Div contenedor usado en la mayoria de templates*/
