--- a/Views/Layouts/Menu/Styles/DriftMenuV2.css
+++ b/Views/Layouts/Menu/Styles/DriftMenuV2.css
@@ -1,119 +1,98 @@
 @font-face {
-    font-family: 'assTRFStencil-Alternate';
-    src: url('Custom-Fonts/assTRFStencil-Alternate/CompassTRFStencilAlternate.ttf'),
-        url('Custom-Fonts/assTRFStencil-Alternate/CompassTRFStencilRegular.ttf');
+    font-family: 'Unica77LL';
+    src: url('../../Menu/Styles/Custom-Fonts/Unica77LL/Unica77MonoLLTT-Regular.ttf');
     font-weight: normal;
     font-style: normal;
 }
-
 @font-face {
-    font-family: 'MittelschriftAustriaW01D';
-    src: url('Custom-Fonts/MittelschriftAustriaW01D/MittelschriftAustriaW01D.ttf');
-    font-weight: normal;
+    font-family: 'Unica77LLBold';
+    src: url('../../Menu/Styles/Custom-Fonts/Unica77LL/Unica77MonoLLTT-Bold.ttf');
+    font-weight: bolder;
     font-style: normal;
 }
 
-@font-face {
-    font-family: 'assTRFStencil-Alternate';
-    src: url('Custom-Fonts/assTRFStencil-Alternate/CompassTRFStencilBold.ttf');
-    font-weight: bold;
-    font-style: normal;
-}
-
-.menu-container {
+.container-menu {
+    height: 100vh;
     background-color: #222222;
     color: #E1DDD6;
+    font-family: Unica77LL;
     overflow: hidden;
 }
 
-.layout_padding {
-    padding-right: 35px;
-    padding-left: 35px;
-    padding-top: 15px;
+.date-info {
+    position: relative;
+    top: 50px;
+    left: 580px;
 }
-.header-title {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    
-}
-.header-title h2 {
-    font-family: assTRFStencil-Alternate;
+
+.date-info span {
+    font-family: Unica77LLBold;
+    font-size: 16px;
     font-weight: bold;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-    font-size: 48px;
-    line-height: .8;
-    
-    /* letter-spacing: 7px; */
-}
-
-.header-title h2:nth-child(2) {
-    transform: translateX(45px);
-}
-
-.header-title h2:nth-child(3) {
-    transform: translateX(95px);
-}
-
-.header-title h2:nth-child(4) {
-    transform: translateX(135px);
-}
-
-.header-title h2:nth-child(5) {
-    transform: translateY(-97px);
-    margin-left: 185px;
-}
-
-.menu-description {
     text-align: left;
 }
 
-.menu-description p {
-    font-family: MittelschriftAustriaW01D;
-    font-size: 35px;
-    text-shadow: 3px 2px 4px rgba(0, 0, 0, 0.7);
-    word-spacing: 7px;
-    line-height: 1.3;
+.date{
+    word-spacing: 10px;
+    margin-right: 20px;
 }
 
-.menu-info {
-    text-align: right;
-}
-.menu-info h4{
-    font-family: MittelschriftAustriaW01D;
-    margin-top: 15px;
-    text-shadow: 3px 2px 4px rgba(0, 0, 0, 0.7);
+.menu-content {
+    position: absolute;
+    top: 110px;
+    left: 70px;
 }
 
-.menu-info .col {
-    display: inline-block;
+.img-title {
+    width: 139px;
+    height: 72px;
 }
 
-.img-box {
+.img-title img {
     width: 100%;
     height: 100%;
 }
 
-.img-box img{
-    max-width: 100%;
-    max-height: 100%;
-}
-.menu-modules {
-    padding: 80px;
-    text-align: center;
-}
-.menu-modules h2{
-    padding-top: 20px;
-    font-family: MittelschriftAustriaW01D;
-    font-size: 30px;
-    text-shadow: 3px 2px 4px rgba(0, 0, 0, 0.7);
-    transition: all .2s;
+.menu-info {
+    width: 236px;
+    height: 126px;
+    margin-top: 75px;
 }
 
-.focus h2{
+.menu-info p {
+    font-size: 18px;
+    text-align: left;
+}
+
+.menu-display {
+    position: fixed;
+    top: 110px;
+    left: 376px;
+    width: 650px;
+    height: 420px;
+}
+
+.menu-display img{
+    width: 100%;
+    height: 100%;
+}
+
+.menu-items{
+    position: absolute;
+    top: 571px;
+    left: 203px;
+}
+
+.menu-items span{
+    font-size: 16px;
+    font-family: Unica77LLBold;
+    font-weight: bold;
+    margin-right: 20px;
+}
+.span-d {
+    margin-left: 20px;
+}
+
+.focus{
     text-decoration: underline;
-    font-size: 35px;
 }
-
-
-
